2페이지 글자 컨테이너

--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ header .menu .nav-item a {
   position: absolute;
   left: 38vw;
   top: 8.7vh;
-  width: 32vw;
+  width: 1000px;
   height: 10vh;
 }
 
