badge 애니메이션

--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,18 @@ body {
   overflow: hidden;
 }
 
+.badge {
+  z-index: 2; 
+  position: fixed; 
+  width: fit-content; 
+  height: fit-content; 
+  top: 132px;
+  right: 12px;
+  border-radius: 10px; 
+  overflow: hidden;
+  box-shadow: 4px 4px 10px rgba(0,0,0,.16);
+}
+
 .background1 .fadeIn {
   opacity: 0;
 }
