--- a/css/main.css
+++ b/css/main.css
@@ -645,113 +645,29 @@ h3 {
   justify-content: center;
 }
 
-.background5 .bg {
-  position: absolute;
-  width: 100%;
-  top: -480px;
-  max-height: 100%;
-  min-height: 94%;
+.background5 .swiper {
+  /* 너비와 높이를 사진 크기에 맞게 수정*/
+  width: 80%;
+  height: 70%;
+  /* 사진의 크기가 초과할 경우 초과된 부분 숨김 */
+  overflow: hidden;
 }
 
-.background5 .M {
-  position: absolute;
-  width: 252px;
-  margin: 5% auto;
-  left: 0px;
-  right: 0px;
-  font-weight: 500;
-  font-size: 55px;
-  color: #000;
-}
-
-.background5 .code {
-  position: absolute;
-  left: 0px;
-  right: 0px;
-  margin: 0 auto;
-  top: 15%;
-  width: auto;
-  height: 300px;
-}
-
-.background5 .B {
-  position: absolute;
-  left: 37%;
-  top: 36%;
+.background5 .swiper .swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  /* 눈에 띄는 분홍색으로 색 수정 */
+  background-color: #ff17cc;
+  /* 글씨 크기 증가 */
   font-size: 30px;
-  color: #8F8F8F;
-  font-weight: 300;
 }
 
-.background5 .picture {
-  position: absolute;
-  margin: 900px auto;
-  left: 0px;
-  right: 0px;
-  width: 435px;
-  height: 83px;
-}
-
-.background5 .picture .face-container {
-  z-index: 1;
-  position: absolute;
-  left: 10%;
-}
-
-.background5 .picture .face {
-  z-index: 2;
-  position: absolute;
-  width: 83px;
-  height: 83px;
-  background: #FFF;
-  border-radius: 100%;
-  box-shadow: 0px 3px 12px rgba(0,0,0,16%);
-}
-
-.background5 .picture .Y {
-  display: block;
-  position: absolute;
-  left: 150px;
-  font-size: 25px;
-  color: #8F8F8F;
-  font-weight: 300;
-}
-
-.background5 .btn {
-  position: absolute;
-  left: 46.5%;
-  bottom: 30%;
-  width: 200px;
-  height: 50px;
-}
-
-.background5 .btn .btn1 {
-  position: absolute;
-  width: 21px;
-  height: 21px;
-  background: #FF17CC;
-  border-radius: 100%;
-}
-
-.background5 .btn .btn2 {
-  position: absolute;
-  left: 38%;
-  top: -5%;
-  width: 21px;
-  height: 21px;
-  border: 3px solid #FF17CC;
-  background: #FFF;
-  border-radius: 100%;
-}
-
-.background5 .btn .btn3 {
-  position: absolute;
-  left: 80%;
-  width: 21px;
-  height: 21px;
-  background: #FF17CC;
-  border-radius: 100%;
+/* bullet 크기와 간격 증가 */
+:root {
+  --swiper-pagination-bullet-size: 16px;
+  --swiper-pagination-bullet-horizontal-gap: 8px;
 }
 
 .background5 .oap {
